# los

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  TUI_MIGRATION.md  justfile  los.toml
docs/: composing.md  demo-fx.tape  demo-state.tape  demo.tape  keybindings.md  sequencer.md  tour.md  writing-a-module.md  writing-dsp.md
docs/plans/: .roadmap.md.swp  delay-288.md  design-language.md  dld.md  elements.md  filterbank-296e.md  lfo.md  maths.md  mixer-v2.md  roadmap.md  sampler.md  sequencer-timing.md  sequencer-undo.md  sequencer-v2.md  tape-deck.md  v1-polish.md
examples/: beep.rs  braids-demo.toml  branches-demo.toml  club-fugue-a.toml  club-fugue-b.toml  club-fugue-c.toml  club-fugue-d.toml  club-fugue-e.toml  club-fugue-f.toml  club-fugue-g.toml  dancing-club-pop.toml  dld-sampler-jam.toml  dpo-strike.toml  edges-demo.toml  first-song.toml  frames-demo.toml  gamelan-elements.toml  gamelan-slendro.toml  grids-demo.toml  house-drone.toml  low-pass-gospel.toml  marbles-demo.toml  peaks-demo.toml  plaits-demo.toml  ringpeek.rs  rings-demo.toml  stages-demo.toml  streams-demo.toml  swarmdemo.rs  tides-demo.toml  warps-demo.toml  worldends.rs
src/: audit.rs  badge.rs  conductor.rs  envelope.rs  faust.rs  ipc.rs  layout.rs  lib.rs  main.rs  midi.rs  mixer.rs  modules.rs  picker.rs  routing.rs  scope.rs  sequencer.rs  session.rs  shm.rs  state.rs  theme.rs  theory.rs  tmux.rs  tone.rs  ui.rs  undo.rs  voice.rs
src/ipc/: routing.rs  shm.rs
src/modules/: badge.rs  branches.rs  conductor.rs  delay.rs  edges.rs  grids.rs  (+12 more)
tools/: los-rave
(+75 files in other folders)
